# rpa-ui-agent

./: .env.example  HANDOFF.md  README.md  UI-TAXONOMY-HANDOFF.md  claude_request_guide.md  examples.py  exp16_smart_wait_results.json  exp29_adaptive_prompt_results.json  exp40_grid_spacing_200_results.json  exp41_prompt_grid_alignment_results.json  exp7_combined_results.json  gpt54-hand-off.md  pyproject.toml  survery.tex  test_exp105_max_steps_35_hard.py  test_exp16_smart_wait.py  test_exp30_expanded_hints.py  test_exp36_jpeg_quality.py  test_exp37_jpeg_quality_25.py  test_exp38_jpeg_quality_10.py  test_exp56_resolution_1344.py  test_exp59_jpeg_q2.py  test_exp63_compressed_prompt.py  test_exp66_no_grid_overlay.py  test_exp7_combined.py  test_vlm_accuracy.py  test_vlm_accuracy_fixed.py  ui_helper.py
rpa/: .gitignore  HANDOFF.md  ITERATION_PLAN.md  README.md  docker-compose.yml  exp46_prompt_grid_400_alignment_results.json  exp51_step_delay_0_results.json  exp56_resolution_1344_results.json  pyproject.toml  screenshot.ps1  test_exp15_action_feedback.py  test_exp17_cumulative.py  test_exp18_step_budget.py  test_exp34_default_config.py  test_exp43_grid_spacing_400.py  test_exp49_cumulative_validation_3.py
rpa/rpa_agent/: __init__.py  agent.py  cli.py  operator.py
rpa/rpa_agent/actions/: __init__.py  definitions.py  parser.py
rpa/rpa_agent/core/: __init__.py  action_notifier.py  controller.py  cursor_overlay.py  hotkey.py  remote_controller.py  (+1 more)
rpa/sandbox/: Dockerfile  README.md  docker-compose.windows.yml  entrypoint.sh  fluxbox-menu  supervisord.conf  test_import.py
(+92 files in other folders)
